--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,7 @@ dependencies {
             "org.junit.jupiter:junit-jupiter:5.9.2",
             "org.slf4j:slf4j-simple:1.7.36")
 }
+
+test {
+    useJUnitPlatform()
+}
